@@ -2,7 +2,7 @@
 <tbody>
 <?php foreach ($this->getTableMap()->getColumns() as $name => $column): ?>
 <tr>
-<th><b><?php echo $column->getPhpName() ?>: </b></th>
+<th><?php echo sfInflector::humanize(sfInflector::underscore($column->getPhpName())) ?>: </th>
 <td>[?= $<?php echo $this->getSingularName() ?>->get<?php echo $column->getPhpName() ?>() ?]</td>
 </tr>
 <?php endforeach ?>
